tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  │ pwd
