tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__workspace_member_credits_depleted_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Workspace credit limit reached
  This workspace is out of credits. The workspace owner can add more. Notify owner?

  1. Yes (y)
› 2. No (default) (n)

  Press enter to confirm or esc to go back
