tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__workspace_owner_limit_state_messages.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "rendered_cases.join(\"\\n---\\n\")"
---
■ Out of credits. This workspace is out of credits; add credits to continue.

---
■ Usage limit reached. Raise the limit to continue.
